k8s/kong/ticketing-ingress.yaml
#vi ticketing-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing
  annotations:
    # 🚨 이 줄이 핵심입니다! 아까 만든 1초 제한 플러그인을 연결해요.
    konghq.com/plugins: ticketing-rate-limit, ticketing-security-all-in-one
spec:
  # 🚨 nginx가 아니라 kong으로 바꿔야 합니다!
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticketing-was-service
            port:
              number: 80
